--- a/src/components/Event_Details/Card.css
+++ b/src/components/Event_Details/Card.css
@@ -3,7 +3,7 @@
   height: 200px;
   width: 350px;
   /* width: 250px; */
-  margin: 15px;
+  margin: 47px 15px;
   display: flex;
   flex-direction: column;
   padding: 5px;
@@ -65,7 +65,8 @@
   margin: 2px 8px;
 }
 .link > i {
-  font-size: 20px;
+  font-size: 23px;
+  /* font-size: 20px; */
 }
 .link > .fa-brands {
   font-size: 23px;
