--- a/src/components/Poster/poster.css
+++ b/src/components/Poster/poster.css
@@ -28,8 +28,8 @@
   width: 30px;
   height: 30px;
   padding: 4px;
-  background: #f5db69;
-  color: #02343f;
+  background: #ab1d79;
+  color: #3c2a21;
   margin: auto;
   margin-top: 20px;
 }
